--- a/css/webs/home.css
+++ b/css/webs/home.css
@@ -24,3 +24,20 @@
   font-size: 18px;
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  .webpage-welcome {
+    font-family: Poppins, sans-serif;
+    width: 90%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    top: 20%;
+    padding: 0.5%;
+    text-align: center;
+    border-top-left-radius: 1vh;
+    border-top-right-radius: 1vh;
+  }
+}
