--- a/css/webpage.css
+++ b/css/webpage.css
@@ -40,3 +40,11 @@ body {
   position: relative;
   padding-bottom: 40px;
 }
+
+@media (max-width: 768px) {
+  .webpage-header {
+    color: white;
+    font-size: 15px;
+    padding: 6px 10px;
+  }
+}
